--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint": "7.18.0",
     "eslint-config-htmlacademy": "2.1.0",
     "eslint-plugin-react": "7.22.0",
+    "mini-css-extract-plugin": "1.6.0",
     "node-sass": "6.0.0",
     "sass": "1.32.13",
     "sass-loader": "10.1.1",
