--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@babel/preset-env": "7.12.11",
     "@babel/preset-react": "7.12.10",
     "babel-loader": "8.2.2",
+    "copy-webpack-plugin": "6.4.1",
     "css-loader": "5.1.1",
     "eslint": "7.18.0",
     "eslint-config-htmlacademy": "2.1.0",
     "eslint-plugin-react": "7.22.0",
+    "file-loader": "6.2.0",
     "mini-css-extract-plugin": "1.6.0",
     "node-sass": "6.0.0",
     "sass": "1.32.13",
