--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "style-loader": "2.0.0",
     "stylelint": "13.6.1",
     "stylelint-config-htmlacademy": "0.1.4",
+    "url-loader": "4.1.1",
     "webpack": "4.46.0",
     "webpack-cli": "3.3.12",
     "webpack-dev-server": "3.11.2"
